kubernetes/minio-operator/overlays/okd/route.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: minio-operator
  namespace: minio-operator
  labels:
    app.kubernetes.io/instance: minio-operator
  annotations:
    route.openshift.io/termination: edge
spec:
  ingressClassName: openshift-default
  rules:
    - host: minio-operator.app.okd.homelab.arthurvardevanyan.com
      http:
        paths:
          - path: ""
            pathType: ImplementationSpecific
            backend:
              service:
                name: console
                port:
                  name: http
